--- a/css/main.css
+++ b/css/main.css
@@ -3,17 +3,52 @@
 
 /* CSS CUSTOMER PROPERTIES/VARIABLES */
 :root {
-  --main-white: #fff;
+  --main-white-color: #fff;
+  --dark-blue-color: #101d2c;
+  --hamburger-icon-color: rgba(198, 153, 99, 0.7);
+  --accent-color: #c69963;
 }
 
 /* GLOBAL STYLES AND RESETS */
 a {
   /* Override bootstrap styling */
-  color: var(--main-white) !important;
+  color: var(--main-white-color) !important;
 }
 
 p {
   margin: 0;
+}
+
+.btn {
+  width: 100px;
+  padding: 5px 0 !important;
+  border: 1px solid var(--accent-color);
+  position: relative;
+  overflow: hidden;
+}
+
+.btn::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(
+    120deg,
+    transparent,
+    rgba(255, 255, 255, 0.2),
+    transparent
+  );
+  transition: all 650ms;
+}
+
+.btn:hover::before {
+  left: 100%;
+}
+
+section {
+  padding: 5rem 0;
 }
 
 /* HEADER STYLES */
@@ -32,6 +67,7 @@ header > .container {
   padding: 0;
 }
 
+/* NAV BAR BRAND */
 .navbar-brand {
   position: absolute;
   width: 100%;
@@ -39,8 +75,187 @@ header > .container {
   top: 10px;
   left: 50%;
   transform: translateX(-50%);
+  transition: opacity 650ms ease;
 }
 
 .navbar-brand:hover {
   opacity: 0.8;
+}
+
+/* HAMBURGER MENU */
+.hamburger-menu {
+  position: fixed;
+  top: 25px;
+  right: 15px;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  background-color: var(--dark-blue-color);
+  border-radius: 4px;
+  cursor: pointer;
+  z-index: 999;
+}
+
+.hamburger-menu i {
+  font-size: 30px;
+  color: var(--hamburger-icon-color);
+  margin: auto;
+}
+
+/* Hide the close icon */
+.hamburger-menu .fa-times {
+  display: none;
+}
+
+/* The open class will be applied through j-query */
+.hamburger-menu .fa-times.open {
+  display: block;
+}
+
+.hamburger-menu .fa-bars.open {
+  display: none;
+}
+
+/* NAVIGATION LIST */
+.nav-list {
+  position: fixed;
+  top: -1000px;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  list-style: none;
+  background-color: var(--dark-blue-color);
+  z-index: 900;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transform: scale(0);
+  transition: opacity 650ms, top 650ms;
+}
+
+.nav-list.open {
+  opacity: 1;
+  transform: scale(1);
+  top: 0;
+}
+
+/* MAIN HERO SECTION */
+.hero-text {
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -45%);
+  text-align: center;
+}
+
+.hero-text h1 {
+  font-family: 'Niconne', cursive;
+  color: var(--accent-color);
+}
+
+/* ABOUT SECTION */
+.section-heading h4 {
+  text-transform: uppercase;
+  color: var(--dark-blue-color);
+  font-family: 'Teko', sans-serif;
+  font-weight: 300;
+  letter-spacing: 1px;
+  font-size: 25px;
+}
+
+.section-heading h1 {
+  font-family: 'Niconne', cursive;
+  color: var(--accent-color);
+}
+
+.about .btn {
+  width: 150px;
+  color: var(--accent-color) !important;
+  transition: background-color 800ms;
+}
+
+.about .btn:hover {
+  color: var(--main-white-color) !important;
+  background-color: var(--accent-color);
+}
+
+/* MEDIA QUERIES */
+/* Break point Bootstrap uses for mobile phones in landscape mode */
+@media (min-width: 576px) {
+  .navbar-brand {
+    max-width: 150px;
+  }
+
+  .hamburger-menu {
+    top: 35px;
+    right: 25px;
+  }
+}
+
+/* For medium screens - tablet devices */
+@media (min-width: 768px) {
+  .btn {
+    width: 150px;
+  }
+}
+
+/* Large screens - large tablets and laptops */
+@media (min-width: 992px) {
+  header > .container {
+    padding: 0 15px;
+  }
+
+  .hamburger-menu {
+    display: none;
+  }
+
+  .navbar-brand {
+    position: initial;
+    transform: initial;
+  }
+
+  .nav-list {
+    position: initial;
+    width: initial;
+    height: initial;
+    background-color: initial;
+    flex-direction: row;
+    opacity: initial;
+    transform: initial;
+    /* transition: initial; */
+    margin: 0;
+    padding: 0;
+  }
+
+  .nav-item {
+    margin: 0 30px;
+  }
+
+  .nav-item:last-child {
+    margin-right: 0;
+  }
+
+  .nav-link {
+    position: relative;
+    padding: 0;
+  }
+
+  .nav-link::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -3px;
+    background-color: var(--accent-color);
+    width: 100%;
+    height: 2px;
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 800ms;
+  }
+
+  .nav-link:hover::before {
+    transform: scaleX(1);
+  }
 }
